# antiplag

./: .gitignore  README.md
docker/: Dockerfile  docker-compose.yml
docs/: specification.md
scripts/: down  start  stop  tests  up
src/: Pipfile  pyproject.toml  start.sh
src/app/: config.py  main.py  schema.py
src/app/service/: entities.py  enums.py  exceptions.py  main.py  messages.py  tests.py  translator.py  utils.py
src/app/service/tests/: test_service.py
src/app/services/: base.py  enums.py  exceptions.py  main.py  messages.py  test_base.py  test_service.py  utils.py
src/app/services/pycode/: service.py  test_service.py
src/app/services/sim/: service.py  test_service.py
src/app/services/sql/: service.py  test_service.py
src/app/templates/: index.html
src/app/tests/: conftest.py  test_api.py
