[tool.poetry]
name = "antiplag"
version = "1.0.0"
description = "Web-сервис для проверки исходного кода на плагиат"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
cappa-sqlplag = "1.1.0"
pycode-similar = "1.4"
flask = "3.1.3"
gunicorn = "26.0.0"
marshmallow = "4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.3"
pytest-mock = "3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
