[tool.poetry]
name = "antiplag"
version = "1.0.0"
description = "Web-сервис для проверки исходного кода на плагиат"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
cappa-sqlplag = "1.1.0"
pycode-similar = "1.4"
fastapi = "0.115.12"
uvicorn = {version = "0.34.2", extras = ["standard"]}
jinja2 = "3.1.6"
gunicorn = "^26.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.3"
pytest-mock = "3.15.1"
httpx = "0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
